--- a/Chef-portfolio/index.html
+++ b/Chef-portfolio/index.html
@@ -60,4 +60,16 @@
         
         <script src="" async defer></script>
     </body>
+
+    <footer>
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Work</a></li>
+                <li><a href="">Recipes</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+    </footer> 
 </html>
