--- a/Chef-portfolio/index.html
+++ b/Chef-portfolio/index.html
@@ -45,16 +45,37 @@
 
             <section class="expSect">
                 <h2>
-                    Work Experience & Education
+                    Featured Chefs
                 </h2>
                 <div class="cardContainer">
-                        <div class="card card1"></div>
-                        <div class="card card2"></div>
-                        <div class="card card3"></div>
-                        <div class="card card4"></div>
-                        <div class="card card5"></div>
-                        <div class="card card6"></div>
-                      </div>
+                    <div class="card card1">
+                        <img class="card_artwork" src="/Chef-portfolio/img/callie1.jpg">
+                        <h2>Chef Callie</h2>
+                        <p class="card_title">Executive Chef</p>
+                        <!-- <p class="card_desc">Chef Accolades Here</p> -->
+                    </div>
+
+                    <div class="card card2">
+                            <img class="card_artwork" src="/Chef-portfolio/img/sam1.jpg">
+                            <h2>Chef Sam</h2>
+                            <p class="card_title">Head Chef</p>
+                            <!-- <p class="card_desc">Chef Accolades Here</p> -->
+                    </div>
+
+                    <div class="card card3">
+                            <img class="card_artwork" src="/Chef-portfolio/img/ruben2.jpg">
+                            <h2>Chef Ruben</h2>
+                            <p class="card_title">Sous Chef</p>
+                            <!-- <p class="card_desc">Chef Accolades Here</p> -->
+                    </div>
+                    
+<!--                     
+                    <div class="card card2"></div>
+                    <div class="card card3"></div>
+                    <div class="card card4"></div>
+                    <div class="card card5"></div>
+                    <div class="card card6"></div> -->
+                </div>
             </section>
         </div>
         
