--- a/Chef-portfolio/index.html
+++ b/Chef-portfolio/index.html
@@ -77,20 +77,130 @@
                     <div class="card card6"></div> -->
                 </div>
             </section>
+           <!--- <section>
+                <div class="work-banner">
+                    <h1>about</h1>
+                </div>
+
+                <div class="work-content">
+                    work history
+                </div>
+                <div class="education-content">
+                    <h2> education</h2>
+                </div>
+            </section> -->
+
+            <section class="recipes">
+                        <div class="recipe-header">
+                            <h1> featured recipes</h1>
+                        </div>
+                <div class="recipe-content">
+                    <img class="recipe-img" src="img/bananatoastpic.jpg" alt="">
+                        <div class="recipe-area">
+                            <h3>blueberry banana frenchtoast</h3>
+                        <h4>ingredients:</h4>
+                        <br>
+                        <ul>
+                            <li>bread</li>
+                            <li>milk</li>
+                            <li>eggs</li>
+                            <li>cinamin</li>
+                            <li>blueberries</li>
+                            <li>bananas</li>
+                            <li>butter</li>
+                        </ul>
+                        <br>
+                            <h4>directions:</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem cumque,
+                                 incidunt officiis magnam fugit reprehenderit iure recusandae at sit, 
+                                 dolores praesentium laudantium? Illo quidem aperiam delectus sit minus 
+                                 nemo debitis autem blanditiis beatae ratione reprehenderit nihil possimus 
+                                 impedit consequuntur saepe quisquam, laborum est? Eius consequuntur commodi
+                                  earum deleniti vel dolore, ea libero provident et perferendis quibusdam, 
+                                  explicabo blanditiis doloremque accusantium aut voluptas, repudiandae
+                                   cupiditate nostrum! Porro eveniet veritatis est eius iure tenetur, nam modi
+                                    fugiat eligendi deleniti, commodi illo, eum distinctio ducimus. Recusandae,
+                                     necessitatibus impedit! Harum ab voluptates deserunt sint eveniet quos
+                                      molestias nostrum cum qui voluptatem libero, ipsam blanditiis.</p>
+                        </div>
+                </div>
+                <div class="recipe-content">
+                        <img class="recipe-img" src="img/burgerpic.jpg" alt="">
+                            <div class="recipe-area">
+                                <h3>rustic double cheeseburger</h3>
+                            <h4>ingredients:</h4>
+                            <br>
+                            <ul>
+                                <li>bread</li>
+                                <li>milk</li>
+                                <li>eggs</li>
+                                <li>cinamin</li>
+                                <li>blueberries</li>
+                                <li>bananas</li>
+                                <li>butter</li>
+                            </ul>
+                            <br>
+                                <h4>directions:</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem cumque,
+                                     incidunt officiis magnam fugit reprehenderit iure recusandae at sit, 
+                                     dolores praesentium laudantium? Illo quidem aperiam delectus sit minus 
+                                     nemo debitis autem blanditiis beatae ratione reprehenderit nihil possimus 
+                                     impedit consequuntur saepe quisquam, laborum est? Eius consequuntur commodi
+                                      earum deleniti vel dolore, ea libero provident et perferendis quibusdam, 
+                                      explicabo blanditiis doloremque accusantium aut voluptas, repudiandae
+                                       cupiditate nostrum! Porro eveniet veritatis est eius iure tenetur, nam modi
+                                        fugiat eligendi deleniti, commodi illo, eum distinctio ducimus. Recusandae,
+                                         necessitatibus impedit! Harum ab voluptates deserunt sint eveniet quos
+                                          molestias nostrum cum qui voluptatem libero, ipsam blanditiis.</p>
+                            </div>
+                    </div> 
+                    <div class="recipe-content">
+                            <img class="recipe-img" src="img/salmonpic.jpg" alt="">
+                                <div class="recipe-area">
+                                    <h3>salmon de la baroque</h3>
+                                <h4>ingredients:</h4>
+                                <br>
+                                <ul>
+                                    <li>bread</li>
+                                    <li>milk</li>
+                                    <li>eggs</li>
+                                    <li>cinamin</li>
+                                    <li>blueberries</li>
+                                    <li>bananas</li>
+                                    <li>butter</li>
+                                </ul>
+                                <br>
+                                    <h4>directions:</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem cumque,
+                                         incidunt officiis magnam fugit reprehenderit iure recusandae at sit, 
+                                         dolores praesentium laudantium? Illo quidem aperiam delectus sit minus 
+                                         nemo debitis autem blanditiis beatae ratione reprehenderit nihil possimus 
+                                         impedit consequuntur saepe quisquam, laborum est? Eius consequuntur commodi
+                                          earum deleniti vel dolore, ea libero provident et perferendis quibusdam, 
+                                          explicabo blanditiis doloremque accusantium aut voluptas, repudiandae
+                                           cupiditate nostrum! Porro eveniet veritatis est eius iure tenetur, nam modi
+                                            fugiat eligendi deleniti, commodi illo, eum distinctio ducimus. Recusandae,
+                                             necessitatibus impedit! Harum ab voluptates deserunt sint eveniet quos
+                                              molestias nostrum cum qui voluptatem libero, ipsam blanditiis.</p>
+                                </div>
+                        </div> 
+        
+
+            </section> 
         </div>
+        <footer class="footer">
+            <nav class=" footer- nav">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Work</a></li>
+                    <li><a href="">Recipes</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </nav>
+            <p>copyright @copy 2019</p>
+        </footer> 
         
         <script src="" async defer></script>
     </body>
-
-    <footer>
-        <nav>
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Work</a></li>
-                <li><a href="">Recipes</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
-        </nav>
-    </footer> 
 </html>
