--- a/Chef-portfolio/index.html
+++ b/Chef-portfolio/index.html
@@ -192,6 +192,6 @@
         </div>
 
         
-        <script src="/core.js" async defer></script>
+        <script src="core.js" ></script>
     </body>
 </html>
